[package]
name = "basefinder"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

seq_io = "0.3.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.14", features = ["derive"] }
noodles = { version = "0.18.0", features = ["vcf"] }
# flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
flate2 = "1.0.22"
regex = "1"
lazy_static = "1.4.0"

